--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
     "@tailwindcss/vite": "^4.0.0",
     "chart.js": "^4.4.7",
     "flowbite": "^3.0.0",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^4.0.0",
     "vite": "^6.0.11"
   },
   "scripts": {
-  "predeploy": "echo 'Building static site...'", 
-  "deploy": "gh-pages -d ."
-}
- 
+    "deploy": "gh-pages -d ."
+  }
 }
